--- a/planillasv_10/views/hr_employee.xml
+++ b/planillasv_10/views/hr_employee.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<openerp>
+<odoo>
     <data>
 
         <record id="hr_view_sv_employee" model="ir.ui.view">
@@ -20,4 +20,4 @@
         
         
     </data>
-</openerp>
+</odoo>
