--- a/planillasv_10/views/planilla.xml
+++ b/planillasv_10/views/planilla.xml
@@ -17,6 +17,21 @@
             </field>
         </record>
 
+
+        <record id="hr_view_sv_payslip_run" model="ir.ui.view">
+            <field name="name">hr.view.sv.payslip.run.form</field>
+            <field name="model">hr.payslip.run</field>
+            <field name="inherit_id" ref="hr_payroll.hr_payslip_run_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='state']" position="after">
+					<button name="calcular_planilla" type="object" string="Calcular Planilla" states="draft" class="oe_highlight"/>
+				</xpath>
+				<xpath expr="//field[@name='journal_id']" position="after">
+					<field name="struct_id"/>
+				</xpath>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="view_sv_banco_form">
             <field name="name">planillasv_10.banco.form</field>
             <field name="model">planillasv_10.banco</field>
