notas de crediot

--- a/reportesv_sucursal/views/consumer_report_pdf_view.xml
+++ b/reportesv_sucursal/views/consumer_report_pdf_view.xml
@@ -14,6 +14,7 @@
                 vertical-align: middle;
                 border-spacing: 0px;
                 padding: 0;
+                margin-top:70px;
               }
               th {
                 text-align: center;
@@ -108,6 +109,12 @@
             <t t-set="total1" t-value="float(0.00)"/>
             <t t-set="total2" t-value="float(0.00)"/>
             <t t-set="total3" t-value="float(0.00)"/>
+            <t t-set="iva" t-value="int(0)"/>
+
+            <t t-set="debito" t-value="float(0.00)"/>
+            <t t-set="ventaNeta" t-value="float(0.00)"/>
+            <t t-set="totalDebito" t-value="float(0.00)"/>
+            <t t-set="totalNeto" t-value="float(0.00)"/>
             <!--Fin de declaraciones-->
 
             <!--Encabezado-->
@@ -127,6 +134,26 @@
                   <h2 class="center-middle-title">VALORES EXPRESADOS EN DOLARES DE LOS ESTADOS UNIDOS</h2>
                 </div>
               </t>
+              <div>
+                <script type="text/javascript">
+                  keyup_ENTER: function (e) {
+                    var source_field = $(e.target).closest('[data-fieldname]').attr('data-fieldname');
+                    var fields_order = this.editor.form.fields_order;
+                    var field_index  = _(fields_order).indexOf(source_field);            
+                    var fields       = this.editor.form.fields;
+                    var field;
+                    do {
+                        if (++field_index >= fields_order.length) {
+                            e.preventDefault();
+                            return this._next();
+                        }
+                        field = fields[fields_order[field_index]];
+                    } while (!field.$el.is(':visible'));
+                    field.focus();
+                    return $.when();
+                },
+                </script>
+              </div>
             <!--Fin encabezado-->
             <!--Contenido de reporte-->
             <!--t t-foreach="company.get_consumer_details(company_id, year, month, company.sv_invoice_serie_size)" t-as="c"-->
@@ -149,17 +176,19 @@
                     <th class="center-middle-o" style="border-spacing: 0.5px">Locales</th>
                     <th class="center-middle-o" style="border-spacing: 0.5px">Exportación</th>
                   </tr>
-                <tr t-foreach="company.get_consumer_details(company_id,year,month,company.sv_invoice_serie_size,stock_id)" t-as="c" class="text-align:right;vertical-align:middle;height: auto;width: 70%;padding: 0px;border-collapse:collapse;">
-                  <td class="center-middle" style="width:5% !important;"><span t-esc="int(c_index) + 1"/></td>
-                  <td class="center-middle" style="width:25% !important"><span t-esc="c.get('fecha').strftime('%d-%m-%Y')"/></td>
-                  <td class="center-middle-o" style="white-space: nowrap;padding:0.5px !important; width:25% !important"><span t-esc="c.get('delnum')"/></td>
-                  <td class="center-middle-o" style="white-space: nowrap;padding:0.5px !important; width:25% !important"><span t-esc="c.get('alnum')"/></td>
-                  <td class="center-middle" style="text-align: right; width:25% !important"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('exento'))"/></td>
-                  <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('gravadolocal'))"/></td>
-                  <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('gravadoexportacion'))"/></td>
-                  <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('retenido'))"/></td>
-                  <t t-set="total" t-value="total + c.get('exento') + c.get('retenido') + c.get('gravadolocal') + c.get('gravadoexportacion')"/>
-                  <td class="center-middle" style="text-align: right; width:90% !important"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(total)"/></td>
+                  <tr t-foreach="company.get_consumer_details(company_id,year,month,company.sv_invoice_serie_size,stock_id)" t-as="c" class="text-align:right;vertical-align:middle;height: auto;width: 70%;padding: 0px;border-collapse:collapse;">
+                    <td class="center-middle" style="width:5% !important;"><span t-esc="int(c_index) + 1"/></td>
+                    <td class="center-middle" style="width:25% !important"><span t-esc="c.get('fecha').strftime('%d-%m-%Y')"/></td>
+                    <td class="center-middle-o" style="white-space: nowrap;padding:0.5px !important; width:25% !important"><span t-esc="c.get('delnum')"/></td>
+                    <td class="center-middle-o" style="white-space: nowrap;padding:0.5px !important; width:25% !important"><span t-esc="c.get('alnum')"/></td>
+                    <td class="center-middle" style="text-align:right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('gravadolocal'))"/></td>
+                    <td class="center-middle" style="text-align: right; width:25% !important"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('exento'))"/></td>
+                    
+                    
+                    <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('gravadoexportacion'))"/></td>
+                    <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(c.get('retenido'))"/></td>
+                    <t t-set="total" t-value="total + c.get('exento') + c.get('retenido') + c.get('gravadolocal') + c.get('gravadoexportacion')"/>
+                    <td class="center-middle" style="text-align: right; width:90% !important"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(total)"/></td>
 
                   <!--Calculo de totales-->
                   <t t-set="totalExentas" t-value="totalExentas + c.get('exento')"/>
@@ -169,6 +198,18 @@
                   <t t-set="ventas" t-value="ventas + total"/>
                   <t t-set="totalIvaLocal" t-value="totalIvaLocal + c.get('ivalocal')"/>
                   <t t-set="totalIvaExp" t-value="totalIvaExp + c.get('ivaexportacion')"/>
+                  <!--Calculo de totales adicionales-->
+
+                    <!-- En caso de cambio de iva cambiar los valores del siguiente bloque -->
+
+                  <t t-set="debito" t-value="float(0.13)"/>
+                  <t t-set="ventaNeta" t-value="float(1.13)"/>
+                  <t t-set="totalDebito" t-value="((totalExentas)*debito)/ventaNeta"/>
+                  <t t-set="totalNeto" t-value="(totalExentas)/1.13" />
+
+
+
+
                   <t t-set="total" t-value="float(0.00)"/>
                   <!--Fin ce calculos-->
                 </tr>
@@ -181,8 +222,9 @@
                   </td>
                   <td>
                   </td>
-                  <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalExentas)"/></td>
                   <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasLocal)"/></td>
+                  <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalExentas)"/></td>
+                  
                   <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasExp)"/></td>
                   <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalRetenido)"/></td>
                   <td class="center-middle" style="text-align: right;"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(ventas)"/></td>
@@ -201,15 +243,17 @@
                       </tr>
                       <tr>
                         <td class="center-middle" style="text-align:left">Ventas Internas Gravadas</td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasLocal)"/></td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalIvaLocal)"/></td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasLocal - totalIvaLocal)"/></td>
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalExentas)"/></td>
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalDebito)"/></td>
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalNeto)"/></td>
                       </tr>
                       <tr>
                         <td class="center-middle" style="text-align:left">Ventas Internas Exentas</td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalExentas)"/></td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(0.00)"/></td>
-                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalExentas)"/></td>
+ 
+
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasLocal)"/></td>
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalIvaLocal)"/></td>
+                        <td class="center-middle" style="text-align:right"><span t-esc="company.currency_id.symbol"/><span t-esc="'{0:.2f}'.format(totalGravadasLocal - totalIvaLocal)"/></td>
                       </tr>
                       <tr>
                         <td class="center-middle" style="text-align:left;border-spacing: 0.3px">Ventas Gravada a Sujeto Tasa Cero (0%)</td>
@@ -219,8 +263,8 @@
                       </tr>
                       <tr>
                         <!--Calculo de totales-->
-                        <t t-set="total1" t-value="total1 + totalGravadasLocal + totalExentas + totalGravadasExp"/>
-                        <t t-set="total2" t-value="total2 + totalIvaLocal + totalIvaExp"/>
+                        <t t-set="total1" t-value="total1 + totalGravadasLocal + totalExentas + totalGravadasExp "/>
+                        <t t-set="total2" t-value="total2 + totalIvaLocal + totalIvaExp + totalDebito"/>
                         <t t-set="total3" t-value="total3 - total2 + total1"/>
                         <!---->
                         <td class="center-middle" style="text-align: left;">Totales</td>
